# tMediaPlayer

./: .gitignore  README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle  settings.gradle.kts
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: icon_pause.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values-night-v27/: themes.xml
demo/: build.gradle  build.gradle.kts
demo/src/main/: AndroidManifest.xml
ffmpeg-5.0.1/: build_android_arm64_v8a.sh  build_android_arm_v7a.sh  build_android_arm_v8a.sh  build_android_x86.sh  build_android_x86_64.sh  build_ffmpeg.sh  build_ffmpeg_all.sh  config.h  config.sh  configure
ffmpeg-5.0.1/android/header/libavcodec/: ffjni.h
ffmpeg-5.0.1/android/header/libavdevice/: sndio.h
ffmpeg-5.0.1/android/header/libavutil/: time_internal.h
ffmpeg-5.0.1/compat/: strtod.d
ffmpeg-5.0.1/doc/: config.texi
ffmpeg-5.0.1/doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavdevice-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc  libavutil-uninstalled.pc  libswresample-uninstalled.pc  libswscale-uninstalled.pc
ffmpeg-5.0.1/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-5.0.1/fftools/: cmdutils.d  ffmpeg.d  ffmpeg_filter.d  ffmpeg_hw.d  ffmpeg_opt.d
ffmpeg-5.0.1/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aaccoder.d  aacdec.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_common.d  aacps_fixed.d  aacps_float.d  aacpsdsp_fixed.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aactab.d  aasc.d  ac3.d  ac3_channel_layout_tab.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  ac3tab.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  (+813 more)
ffmpeg-5.0.1/libavdevice/: alldevices.d  android_camera.d  avdevice.d  fbdev_common.d  fbdev_dec.d  fbdev_enc.d  header.txt  lavfi.d  libavdevice.pc  libavdevice.ver  libavdevice.version  timefilter.d  utils.d  v4l2-common.d  v4l2.d  v4l2enc.d
ffmpeg-5.0.1/libavfilter/: aeval.d  af_acontrast.d  af_acopy.d  af_acrossover.d  af_acrusher.d  af_adeclick.d  af_adecorrelate.d  af_adelay.d  af_adenorm.d  af_aderivative.d  af_adynamicequalizer.d  af_adynamicsmooth.d  af_aecho.d  af_aemphasis.d  af_aexciter.d  af_afade.d  af_afftdn.d  af_afftfilt.d  af_afir.d  af_aformat.d  af_afreqshift.d  af_afwtdn.d  af_agate.d  af_aiir.d  af_alimiter.d  af_amerge.d  af_amix.d  af_amultiply.d  af_anequalizer.d  af_anlmdn.d  af_anlms.d  af_anull.d  af_apad.d  af_aphaser.d  af_apsyclip.d  af_apulsator.d  af_aresample.d  af_arnndn.d  af_asdr.d  af_asetnsamples.d  (+311 more)
ffmpeg-5.0.1/libavfilter/dnn/: dnn_backend_common.d  dnn_backend_native.d  dnn_backend_native_layer_avgpool.d  dnn_backend_native_layer_conv2d.d  dnn_backend_native_layer_dense.d  dnn_backend_native_layer_depth2space.d  dnn_backend_native_layer_mathbinary.d  dnn_backend_native_layer_mathunary.d  dnn_backend_native_layer_maximum.d  dnn_backend_native_layer_pad.d  dnn_backend_native_layers.d  dnn_interface.d  dnn_io_proc.d  queue.d  safe_queue.d
ffmpeg-5.0.1/libavformat/: 3dostr.d  4xm.d  a64.d  aacdec.d  aadec.d  aaxdec.d  ac3_channel_layout_tab.d  ac3dec.d  acedec.d  acm.d  act.d  adp.d  ads.d  adtsenc.d  adxdec.d  aea.d  afc.d  aiff.d  aiffdec.d  aiffenc.d  aixdec.d  allformats.d  alp.d  amr.d  amvenc.d  anm.d  apc.d  ape.d  apetag.d  apm.d  apngdec.d  apngenc.d  aptxdec.d  aqtitledec.d  argo_asf.d  argo_brp.d  argo_cvg.d  asf.d  asfcrypt.d  asfdec_f.d  (+462 more)
ffmpeg-5.0.1/libavutil/: adler32.d  aes.d  aes_ctr.d  audio_fifo.d  avsscanf.d  avstring.d  base64.d  blowfish.d  bprint.d  buffer.d  camellia.d  cast5.d  channel_layout.d  color_utils.d  cpu.d  crc.d  des.d  detection_bbox.d  dict.d  display.d  dovi_meta.d  downmix_info.d  encryption_info.d  error.d  eval.d  fifo.d  file.d  file_open.d  film_grain_params.d  fixed_dsp.d  float_dsp.d  frame.d  hash.d  hdr_dynamic_metadata.d  header.txt  hmac.d  hwcontext.d  imgutils.d  integer.d  intmath.d  (+40 more)
ffmpeg-5.0.1/libswresample/: audioconvert.d  dither.d  header.txt  libswresample.pc  libswresample.ver  libswresample.version  options.d  rematrix.d  resample.d  resample_dsp.d  swresample.d  swresample_frame.d
ffmpeg-5.0.1/libswscale/: alphablend.d  gamma.d  header.txt  hscale.d  hscale_fast_bilinear.d  input.d  libswscale.pc  libswscale.ver  libswscale.version  options.d  output.d  rgb2rgb.d  slice.d  swscale.d  swscale_unscaled.d  utils.d  vscale.d  yuv2rgb.d
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tmediaplayer/: build.gradle  build.gradle.kts  publish.properties
tmediaplayer/src/main/: AndroidManifest.xml
tmediaplayer/src/main/cpp/: CMakeLists.txt  t_media_bridge.cpp  t_media_jni.cpp  tmediaplayer.cpp
tmediaplayer/src/main/cpp/ffmpeg/header/: ffjni.h
tmediaplayer/src/main/cpp/ffmpeg/header/libavutil/: ffversion.h
tmediaplayer/src/main/cpp/header/: media_player.h  media_player_pool.h  media_time.h
tmediaplayer/src/main/cpp/mediaplayer/: media_player.cpp  media_player_pool.cpp  media_time.cpp
tmediaplayer/src/main/cpp/tmediaaudiotrack/: jni.cpp  tmediaaudiotrack.cpp
tmediaplayer/src/main/cpp/tmediaaudiotrack/header/: tmediaaudiotrack.h
tmediaplayer/src/main/cpp/tmediaframeloader/: jni.cpp  tmediaframeloader.cpp
tmediaplayer/src/main/cpp/tmediaframeloader/header/: tmediaframeloader.h
tmediaplayer/src/main/cpp/tmediaplayer/: jni.cpp  tmediaplayer.cpp
tmediaplayer/src/main/cpp/tmediaplayer/header/: tmediaplayer.h
tmediaplayer/src/main/cpp/tmediaplayer2/: jni.cpp  tmediaplayer.cpp
tmediaplayer/src/main/cpp/tmediaplayer2/header/: tmediaplayer.h
tmediaplayer/src/main/cpp/tmediasubtitle/: ass_demo.cpp  demo.cpp  jni.cpp  tmediasubtitle.cpp
tmediaplayer/src/main/cpp/tmediasubtitle/header/: tmediasubtitle.h
tmediaplayer/src/main/cpp/tmediasubtitlepktreader/: jni.cpp  tmediasubtitlepktreader.cpp
tmediaplayer/src/main/cpp/tmediasubtitlepktreader/header/: tmediasubtitlepktreader.h
(+199 files in other folders)
